# ASCII-Clash_mk2

./: .gitignore  CMakeLists.txt  Config.h  README.md  ThePlan2ElectricBogalloo.md  main.cpp
Database/: DBManager.cpp  DBManager.h
Database/DB_Files/: ASCII-ClashDB.db
GameLogic/Fighting/: Fight.h  Logger.h
GameLogic/Monsters/: Descriptions.h  MathHelpers.h  Monster.cpp  Monsters.h  StatDict.h  Stats.h
GameLogic/Monsters/MonsterClasses/: Human.cpp  Methog.cpp  Orc.cpp
Server/: GameServer.cpp  GameServer.h  PlayerSession.cpp  PlayerSession.h  ServerHelpers.cpp  ServerHelpers.h
Server/HTML/: about.html  home.html  index.html  register.html  style.css  team.html  utils.js  viewMonster.html
